--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="assets/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/js/owl.carousel.min.js">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    
     <link
     href="https://fonts.googleapis.com/css2?family=Lato:wght@700;900&family=Permanent+Marker&family=Titillium+Web:wght@400;700;900&display=swap"
     rel="stylesheet">
@@ -139,52 +140,46 @@
                 <div class="owl-carousel">
 
                     <div class="slider-card">
-                        <div>
+                        <div class="slider-img-parent">
                             <img src="../KFC/assets/images/pngwing.com (2).png"
-                                style="padding-top: 35px; padding-bottom:10px;">
+                                style="">
                         </div>
                         <div class="text-center font-weight-bold"><span>COMBO</span></div>
                     </div>
                     <div class="slider-card">
-                        <div>
-                            <img src="../KFC/assets/images/pngwing.com (3).png" style="
-					padding-bottom: 6px;
-				">
+                        <div class="slider-img-parent">
+                            <img src="../KFC/assets/images/pngwing.com (3).png" style="">
                         </div>
                         <div class="text-center font-weight-bold"><span>FRIES</span></div>
                     </div>
                     <div class="slider-card">
-                        <div>
-                            <img src="../KFC/assets/images/pngwing.com (4).png" style="padding-top: 23px;
-					padding-bottom: 14px;
-				">
+                        <div class="slider-img-parent">
+                            <img src="../KFC/assets/images/pngwing.com (4).png" style="">
+			
                         </div>
                         <div class="text-center font-weight-bold"><span>PIECE</span></div>
                     </div>
                     <div class="slider-card">
-                        <div>
+                        <div class="slider-img-parent">
                             <img src="../KFC/assets/images/pngwing.com (5).png">
                         </div>
                         <div class="text-center font-weight-bold"><span>LEG-PIECE</span></div>
                     </div>
                     <div class="slider-card">
-                        <div>
-                            <img src="../KFC/assets/images/pngwing.com (6).png" style="padding-top: 4px;
-					padding-bottom: 7px;">
+                        <div class="slider-img-parent">
+                            <img src="../KFC/assets/images/pngwing.com (6).png" style="">
                         </div>
                         <div class="text-center font-weight-bold"><span>ROLL</span></div>
                     </div>
                     <div class="slider-card">
-                        <div>
-                            <img src="../KFC/assets/images/pngwing.com (7).png" style="padding-top: 17px;
-					padding-bottom: 7px;">
+                        <div class="slider-img-parent">
+                            <img src="../KFC/assets/images/pngwing.com (7).png" style="">
                         </div>
                         <div class="text-center font-weight-bold"><span>BURGER</span></div>
                     </div>
                     <div class="slider-card">
-                        <div>
-                            <img src="../KFC/assets/images/pngwing.com (8).png" style="padding-top: 14px;
-					padding-bottom: 18px;">
+                        <div class="slider-img-parent">
+                            <img src="../KFC/assets/images/pngwing.com (8).png" style="">
                         </div>
                         <div class="text-center font-weight-bold"><span>FRIES</span></div>
                     </div>
@@ -616,6 +611,13 @@
             </nav>
         </div>
     </section>
+
+    <section class="py-5">
+    	<div class="container">
+    		<button class="my-btn">This is the button</button>
+    	</div>
+    </section>
+
     <section class="bg-dark">
         <div class="container">
             <div class="row footer-ptb">
