--- a/index.html
+++ b/index.html
@@ -134,60 +134,59 @@
     <section id="slider" style="background-color: white;position: relative;">
         <div class="container pb-4">
             <div class="text-center"><a><button type="button"
-                        class="btn btn-alignment btn-warning text-white">MENUS</button></a>
+                        class="btn menu-btn btn-warning text-white font-weight-bold">MENUS</button></a>
             </div>
             <div class="slider  owl-carousel2 pt-5">
                 <div class="owl-carousel">
 
                     <div class="slider-card">
                         <div class="slider-img-parent">
-                            <img src="../KFC/assets/images/pngwing.com (2).png"
-                                style="">
+                            <img src="../KFC/assets/images/pngwing.com (2).png">
                         </div>
-                        <div class="text-center font-weight-bold"><span>COMBO</span></div>
+                        <div class="text-center font-weight-bold pb-1"><span>COMBO</span></div>
                     </div>
                     <div class="slider-card">
                         <div class="slider-img-parent">
-                            <img src="../KFC/assets/images/pngwing.com (3).png" style="">
+                            <img src="../KFC/assets/images/pngwing.com (3).png">
                         </div>
-                        <div class="text-center font-weight-bold"><span>FRIES</span></div>
+                        <div class="text-center font-weight-bold pb-1"><span>FRIES</span></div>
                     </div>
                     <div class="slider-card">
                         <div class="slider-img-parent">
-                            <img src="../KFC/assets/images/pngwing.com (4).png" style="">
+                            <img src="../KFC/assets/images/pngwing.com (4).png">
 			
                         </div>
-                        <div class="text-center font-weight-bold"><span>PIECE</span></div>
+                        <div class="text-center font-weight-bold pb-1"><span>PIECE</span></div>
                     </div>
                     <div class="slider-card">
                         <div class="slider-img-parent">
                             <img src="../KFC/assets/images/pngwing.com (5).png">
                         </div>
-                        <div class="text-center font-weight-bold"><span>LEG-PIECE</span></div>
+                        <div class="text-center font-weight-bold pb-1"><span>LEG-PIECE</span></div>
                     </div>
                     <div class="slider-card">
                         <div class="slider-img-parent">
-                            <img src="../KFC/assets/images/pngwing.com (6).png" style="">
+                            <img src="../KFC/assets/images/pngwing.com (6).png">
                         </div>
-                        <div class="text-center font-weight-bold"><span>ROLL</span></div>
+                        <div class="text-center font-weight-bold pb-1"><span>ROLL</span></div>
                     </div>
                     <div class="slider-card">
                         <div class="slider-img-parent">
-                            <img src="../KFC/assets/images/pngwing.com (7).png" style="">
+                            <img src="../KFC/assets/images/pngwing.com (7).png">
                         </div>
-                        <div class="text-center font-weight-bold"><span>BURGER</span></div>
+                        <div class="text-center font-weight-bold pb-1"><span>BURGER</span></div>
                     </div>
                     <div class="slider-card">
                         <div class="slider-img-parent">
                             <img src="../KFC/assets/images/pngwing.com (8).png" style="">
                         </div>
-                        <div class="text-center font-weight-bold"><span>FRIES</span></div>
+                        <div class="text-center font-weight-bold pb-1"><span>FRIES</span></div>
                     </div>
                 </div>
             </div>
     </section>
 
-    <section style="background-color: rgb(252 223 196 / 39%);">
+    <section class="offer-backgroud">
         <div class="container ptb-5">
             <div class="row">
 
@@ -401,8 +400,8 @@
                         <div class="offer-card-color anyday-offer-shadow">
                             <div class="d-flex m-3">
                                 <div>
-                                    <p class="offer-card-para">CRISPY AND FRESH CHICKEN MASTER CHEF</p>
-                                    <div class="py-4">
+                                    <p class="offer-card-para-font">CRISPY AND FRESH CHICKEN MASTER CHEF</p>
+                                    <div class="offer-btn-mb">
                                         <button type="button"
                                             class="btn btn-danger text-white offer-sec-btn font-weight-bold">100% REAL
                                             CHICKEN</button>
@@ -418,9 +417,9 @@
                         <div class="offer-card-color">
                             <div class="d-flex m-3">
                                 <div class="">
-                                    <p class="offer-card-para" style="padding-bottom: 58px;">DO YOU WANT TO BE A HOPE
+                                    <p class="offer-card-para-font" style="padding-bottom: 58px;">DO YOU WANT TO BE A HOPE
                                     </p>
-                                    <div class="py-4">
+                                    <div class="offer-btn-mb">
                                         <button type="button"
                                             class="btn btn-danger text-white offer-sec-btn font-weight-bold">SEE
                                             MORE</button>
@@ -437,6 +436,9 @@
             </div>
 
         </div>
+        <div class="offer-back-circle"></div>
+        <div class="offer-inside-donut"></div>
+        <div class="offer-circle-donut"></div>
     </section>
 
 
@@ -502,7 +504,7 @@
                         <div class="col-md-6">
                             <div class="bg-white pl-3 pt-3 pb-1 pr-1 border-rad feedback-shadow">
                                 <h6 class="feedback witter-circle padding-left">FrancoEjder</h6>
-                                <p class="padding-left font-15">Lorem Ipsum is simply dummy text of the
+                                <p class="pl pr font-15" >Lorem Ipsum is simply dummy text of the Lorem Ipsum 
                                 </p>
                                 <div class="twitter-circle">
                                     <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -513,7 +515,7 @@
                         <div class="col-md-6">
                             <div class="bg-white pl-3 pt-3 pb-1 pr-1 border-rad feedback-shadow">
                                 <h6 class="feedback witter-circle padding-left">aysegul</h6>
-                                <p class="padding-left font-15">Lrem ipsum doler sit amet,adipiscing aliqua</p>
+                                <p class="pl pr font-15">Lrem ipsum doler sit amet,adipiscin dgf Lorem Ipsum </p>
                                 <div class="twitter-circle">
                                     <i class="fa fa-twitter" aria-hidden="true"></i>
                                 </div>
@@ -522,10 +524,10 @@
                     </div>
                     <div class="owl-carousel3">
                         <div class="owl-carousel">
-                            <div class="p-3 bg-white border-rad ">
+                            <div class="p-3 bg-white border-rad position">
                                 <h6 class="feedback witter-circle">aysegul</h6>
-                                <div class="image">
-                                    <img src="assets/images/smiley.jpg">
+                                <div class="">
+                                    <img src="assets/images/smiley.jpg" style="height: 140px;">
                                 </div>
                                 <div class="instagram-circle">
                                     <i class="fa fa-instagram" aria-hidden="true"></i>
@@ -533,7 +535,7 @@
                             </div>
                             <div class="p-3 bg-white border-rad">
                                 <h6 class="feedback witter-circle">aysegul</h6>
-                                <p class="font-15">Lorem Ipsum is simply dummy text of the printing
+                                <p class="font-15">Lrem ipsum doler sit amet,adipiscin dgf Lorem Ipsum is simply dummy text of the printing
 
                                 </p>
                                 <div class="facebook-circle">
@@ -542,7 +544,7 @@
                             </div>
                             <div class="p-3 bg-white border-rad ">
                                 <h6 class="feedback witter-circl">aysegul</h6>
-                                <p class="font-15">Lorem Ipsum is simply dummy text of the printing
+                                <p class="font-15">Lrem ipsum doler sit amet,adipiscin dgf Lorem Ipsum is simply dummy text of the printing
 
                                 </p>
                                 <div class="facebook-circle">
@@ -551,7 +553,34 @@
                             </div>
                             <div class="p-3 bg-white border-rad">
                                 <h6 class="feedback witter-circle">aysegul</h6>
-                                <p class=" font-15">Lorem Ipsum is simply dummy text of the printing
+                                <p class=" font-15">Lrem ipsum doler sit amet,adipiscin dgf Lorem Ipsum is simply dummy text of the printing
+
+                                </p>
+                                <div class="facebook-circle">
+                                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="p-3 bg-white border-rad">
+                                <h6 class="feedback witter-circle">aysegul</h6>
+                                <p class=" font-15">Lrem ipsum doler sit amet,adipiscin dgf Lorem Ipsum is simply dummy text of the printing
+
+                                </p>
+                                <div class="facebook-circle">
+                                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="p-3 bg-white border-rad">
+                                <h6 class="feedback witter-circle">aysegul</h6>
+                                <p class=" font-15">Lrem ipsum doler sit amet,adipiscin dgf Lorem Ipsum is simply dummy text of the printing
+
+                                </p>
+                                <div class="facebook-circle">
+                                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="p-3 bg-white border-rad">
+                                <h6 class="feedback witter-circle">aysegul</h6>
+                                <p class=" font-15">Lrem ipsum doler sit amet,adipiscin dgf Lorem Ipsum is simply dummy text of the printing
 
                                 </p>
                                 <div class="facebook-circle">
@@ -610,12 +639,6 @@
                 </div>
             </nav>
         </div>
-    </section>
-
-    <section class="py-5">
-    	<div class="container">
-    		<button class="my-btn">This is the button</button>
-    	</div>
     </section>
 
     <section class="bg-dark">
