--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- custom style -->
+    <!--Animation cdn-->
+
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+        <!-- custom style -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -31,7 +37,7 @@
     <div class="bg-danger">
         <div class="container-md container-fluid ">
             <nav>
-                <div class="navigation">
+                <div class="navigation animate__rubberBand ">
                     <div class="">
                         <h2 class="kfc-logo kfc-logo-font m-0 text-white">KFC</h2>
                     </div>
@@ -71,7 +77,7 @@
         </div>
     </div>
     <section class="bg-danger hero-position">
-        <div class="container">
+        <div class="container animate__animated animate__fadeInDown wow">
             <div class="ptb-hero">
                 <div class="hero-owl-carousel">
                     <div class="owl-carousel">
@@ -88,7 +94,7 @@
                                 <button type="button" class="btn text-white font-weight-bold btn-hero btn-hero-767 btn-hero-991">ORDER
                                     NOW</button>
                             </div>
-                            <div>
+                            <div class="">
                                 <img src="../KFC/assets/images/kfc-food-fried-chicken-transparent-png-2335452.png">
                             </div>
                         </div>
@@ -122,7 +128,7 @@
                                     class="btn-lg text-white font-weight-bold btn-hero shadow-lg btn-hero-767 btn-hero-991">ORDER
                                     NOW</button>
                             </div>
-                            <div>
+                            <div class="">
                                 <img src="../KFC/assets/images/59060a200cbeef0acff9a652.png">
                             </div>
                         </div>
@@ -173,48 +179,48 @@
                 <div class="text-center"><a><button type="button"
                             class="btn menu-btn btn-warning text-white font-weight-bold">MENUS</button></a>
                 </div>
-                <div class="slider  menu-owl-carousel pt-5">
+                <div class="slider  menu-owl-carousel pt-5 ">
                     <div class="owl-carousel">
 
                         <div class="slider-card">
-                            <div class="menu-slider-img-parent">
+                            <div class="menu-slider-img-parent animate__animated animate__bounceIn wow animate__delay-0.0                   2s">
                                 <img src="../KFC/assets/images/pngwing.com (2).png">
                             </div>
                             <div class="text-center font-weight-bold pb-1"><span>COMBO</span></div>
                         </div>
                         <div class="slider-card">
-                            <div class="menu-slider-img-parent">
+                            <div class="menu-slider-img-parent animate__animated animate__bounceIn wow">
                                 <img src="../KFC/assets/images/pngwing.com (3).png">
                             </div>
                             <div class="text-center font-weight-bold pb-1"><span>FRIES</span></div>
                         </div>
                         <div class="slider-card">
-                            <div class="menu-slider-img-parent">
+                            <div class="menu-slider-img-parent animate__animated animate__bounceIn wow">
                                 <img src="../KFC/assets/images/pngwing.com (4).png">
 
                             </div>
                             <div class="text-center font-weight-bold pb-1"><span>PIECE</span></div>
                         </div>
                         <div class="slider-card">
-                            <div class="menu-slider-img-parent">
+                            <div class="menu-slider-img-parent animate__animated animate__bounceIn wow">
                                 <img src="../KFC/assets/images/pngwing.com (5).png">
                             </div>
                             <div class="text-center font-weight-bold pb-1"><span>LEG-PIECE</span></div>
                         </div>
                         <div class="slider-card">
-                            <div class="menu-slider-img-parent">
+                            <div class="menu-slider-img-parent animate__animated animate__bounceIn wow">
                                 <img src="../KFC/assets/images/pngwing.com (6).png">
                             </div>
                             <div class="text-center font-weight-bold pb-1"><span>ROLL</span></div>
                         </div>
                         <div class="slider-card">
-                            <div class="menu-slider-img-parent">
+                            <div class="menu-slider-img-parent animate__animated animate__bounceIn wow">
                                 <img src="../KFC/assets/images/pngwing.com (7).png">
                             </div>
                             <div class="text-center font-weight-bold pb-1"><span>BURGER</span></div>
                         </div>
                         <div class="slider-card">
-                            <div class="menu-slider-img-parent">
+                            <div class="menu-slider-img-parent animate__animated animate__bounceIn wow">
                                 <img src="../KFC/assets/images/pngwing.com (8).png" >
                             </div>
                             <div class="text-center font-weight-bold pb-1"><span>FRIES</span></div>
@@ -230,7 +236,7 @@
             <div class="ptb-5">
                 <div class="row">
 
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 animate__animated animate__fadeInRight wow">
                         <div class="offer-slider-position offer-card-color">
                             <div class="slider-card slider-card-padding">
 
@@ -373,7 +379,7 @@
                         </div>
 
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 animate__animated animate__fadeInLeft wow">
                         <div class="offer-slider-position offer-card-color">
                             <div class="slider-card slider-card-padding">
                                 <div class="owl-carousel anyday-offer-shadow">
@@ -445,7 +451,7 @@
                 <div class="mt-4">
                     <div class="row">
                         <div class="col-md-6">
-                            <div class="offer-card-color anyday-offer-shadow offer-card-padding">
+                            <div class="offer-card-color anyday-offer-shadow offer-card-padding animate__animated animate__lightSpeedInLeft wow">
                                 <div class="d-flex">
                                     <div class="offer-margin-right">
                                         <p class="offer-card-para-font">CRISPY AND FRESH CHICKEN MASTER CHEF</p>
@@ -453,7 +459,7 @@
                                             <button type="button"
                                                 class="btn btn-danger text-white offer-sec-btn font-weight-bold">100%
                                                 REAL
-                                                CHICKEN</button>
+                                                </button>
                                         </div>
                                     </div>
                                     <div class="offer-image ">
@@ -464,7 +470,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="offer-padding-top">
-                                <div class="offer-card-color offer-card-padding anyday-offer-shadow">
+                                <div class="offer-card-color offer-card-padding anyday-offer-shadow animate__animated animate__lightSpeedInRight wow">
                                     <div class="d-flex">
                                         <div class="offer-margin-right">
                                             <p class="offer-card-para-font"">DO YOU WANT TO BE A
@@ -511,7 +517,7 @@
                 </div>
                 <div class="col-md-6 col-sm-6">
                     <div class="mobile-right-area">
-                        <div class="mobile-heading">Now With Your Favourite <br /> KFC Mobile Application <br /> in your
+                        <div class="mobile-heading lineUp wow">Now With Your Favourite <br /> KFC Mobile Application <br /> in your
                             pocket</div>
 
                         <!-- <div class="download">Download</div> -->
@@ -519,7 +525,7 @@
                         <div class="mobile-download mt-5">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <a href class="mobile-btn">
+                                    <a href class="mobile-btn animate__animated animate__pulse wow">
                                         <div><i class="fa fa-apple"></i></div>
                                         <div>
                                             <div class="font-14 ln-1">Download on the</div>
@@ -528,7 +534,7 @@
                                     </a>
                                 </div>
                                 <div class="col-md-6">
-                                    <a href="">
+                                    <a href class="mobile-btn animate__animated animate__pulse wow">
                                         <div><i class="fa fa-android"></i></div>
                                         <div>
                                             <div class="font-14 ln-1">Get it on </div>
@@ -554,7 +560,7 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-12">
                         <div class="row py-4">
-                            <div class="col-md-6 col-md-12">
+                            <div class="col-md-6 col-md-12 lineUp">
                                 <div class="bg-white feedback-border-radius feedback-shadow feedback-margin-bottom p-3">
                                     <h6 class="feedback ">FrancoEjder</h6>
                                     <p class="pl font-15 pl-5">Lrem ipsum doler sit amet,adipiscin dgf Lorem Ipsum
@@ -565,7 +571,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-md-12 pt-3">
+                            <div class="col-md-6 col-md-12 pt-3 lineUp wow">
                                 <div class="bg-white feedback-border-radius feedback-shadow p-3">
                                     <h6 class="feedback  ">aysegul</h6>
                                     <p class="pl font-15 pl-5">Lrem ipsum doler sit amet,adipiscin dgf Lorem Ipsum </p>
@@ -575,7 +581,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="feedback-owl-carousel">
+                        <div class="feedback-owl-carousel lineUp wow">
                             <div class="owl-carousel">
                                 <div class="p-3 bg-white feedback-border-radius position">
                                     <h6 class="feedback ">aysegul</h6>
@@ -659,7 +665,7 @@
                     </div>
 
                     <div class="col-md-6 col-sm-12">
-                        <div class="iframe-back">
+                        <div class="iframe-back lineUp wow">
                             <iframe  src="https://www.youtube.com/embed/tgbNymZ7vqY" class="w-100 h-100">
                             </iframe>
                         </div>
@@ -671,7 +677,7 @@
     <section class="footer-color">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-12 d-flex flex-wrap">
+                <div class="col-lg-6 col-12 d-flex flex-wrap animate__backInLeft animate__animated wow ">
                     <div class="col-md-4 col-12">
                         <h3 class="nav-bottom text-white footer-text-align">KFC</h3>
                     </div>
@@ -691,7 +697,7 @@
                     </div>
 
                 </div>
-                <div class="col-lg-6 col-12 d-flex justify-content-lg-end icon-justify-center align-items-center justify-content-center icon-margin-bottom">
+                <div class="col-lg-6 col-12 d-flex justify-content-lg-end icon-justify-center animate__backInRight animate__animated wow align-items-center justify-content-center icon-margin-bottom">
                     <a class="navbar-brand text-white small-circle" href="#"><i
                             class="fa fa-facebook icon-alignment-center h-100 text-white" aria-hidden="true"
                             ></i></a>
@@ -762,6 +768,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+          <!-- link wow.js cdn  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script>
+      new WOW().init();
+    </script>
 
     <script src="assets/js/carousel.js"></script>
 
